--- a/views/index.html
+++ b/views/index.html
@@ -42,8 +42,9 @@
             </ul>
         </div>
     </nav>
-  <div class="container" id="chartList">
-    <div class="container" >
+
+<div id="chartList" class="container">
+    
       <div class="row justify-content-md-center" id="rank">
         <div class="col col-lg-8">
           Top 100 Books 
@@ -55,16 +56,14 @@
           Your Rating 
         </div>
       </div>
-    </div>
-    <div class="container" >
-      <div class="row justify-content-md-center" id="lister">
-       
-      </div>
-    </div>
-  </div>  
+    
 
+    <div id="lister">
+        
+    </div>
+  
+</div>
 
- 
 </body>
 
 </html>
