--- a/views/index.html
+++ b/views/index.html
@@ -30,6 +30,8 @@
 <body>
 
   
+
+  
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id>
         <a class="navbar-brand" href="#">IBDb</a>
 
@@ -43,16 +45,22 @@
         </div>
     </nav>
 
+
+<div id="button-group">
+  <button  data-order="descendingByRating">DES BY RATING</button>
+  <button  data-order="ascendingByRating">ASC BY RATING</button>
+</div>
+
 <div id="chartList" class="container">
     
       <div class="row justify-content-md-center" id="rank">
-        <div class="col col-lg-8">
+        <div class="col col-lg-6">
           Top 100 Books 
         </div>
         <div class="col col-lg-2">
           IBDb Rating
         </div>
-        <div class="col col-lg-2">
+        <div class="col col-lg-4">
           Your Rating 
         </div>
       </div>
