--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,14 +1,32 @@
 body {
-    background-color: #659DBD;
+    background-color: #4b000d;
+}
+
+nav {
+    background-color: #f9a916;
+}
+.nav-text{
+    color: black;
+    font-weight: bold;
+}
+
+.navbar-brand{
+    font-size: 27px;
+    font-weight: bold;
 }
 
 
 #chartList{
     background-color:  #F8F8F8;
+    margin-top: 10px;
 }
 
 #rank{
     font-size: 23px;
+    font-weight: 600;
+    background-color: rgb(202, 201, 201);
+    border: solid 1px rgba(48, 47, 48, 0.363);
+    
 }
 
 .fa-star{
@@ -17,8 +35,10 @@ body {
 }
 
 #lister {
+    
     display: flex;
     flex-direction: column;
+    
 }
 
 .selectStar{
@@ -34,7 +54,9 @@ body {
 }
 
 .book {
-    padding-top: 8px
+    padding: 4px 0px 4px 0px;
+    border: solid 0.25px rgba(48, 47, 48, 0.363);
+    
 }
 
 
@@ -45,11 +67,14 @@ body {
     color:orange
 }
 
-/* .book:nth-child(odd) {
-   background-color: #F6F6F5;
+.userRating{
+    color: rgb(226, 123, 6);
+    font-family: "Font Awesome 5 Free";
+    font-size: 1rem;
+    font-weight: 900;
+    margin-left: 4px;
+
 }
 
-.book:nth-child(even) {
-    background-color: white;
- } */
+
 
