--- a/views/index.html
+++ b/views/index.html
@@ -32,24 +32,24 @@
   
 
   
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" id>
-        <a class="navbar-brand" href="#">IBDb</a>
+    <nav class="navbar navbar-expand-lg " id>
+        <a class="navbar-brand nav-text" href="#">IBDb</a>
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto flex-column-reverse flex-md-row">
 
                 <li class="nav-item">
-                    <a class="nav-link " href="#">Sign In</a>
+                    <a class="nav-link nav-text" href="#">Sign In</a>
                 </li>
             </ul>
         </div>
     </nav>
 
 
-<div id="button-group">
-  <button  data-order="descendingByRating">DES BY RATING</button>
-  <button  data-order="ascendingByRating">ASC BY RATING</button>
-</div>
+<!-- <div id="button-group">
+  <button  data-order="descendingByRating"><span>&#8593;</span></button>
+  <button  data-order="ascendingByRating"><span>&#8595;</span></button>
+</div> -->
 
 <div id="chartList" class="container">
     
