--- a/views/auth.html
+++ b/views/auth.html
@@ -16,49 +16,94 @@
 
 
   <!-- APPLICATION SCRIPTS -->
+  <script defer src="/scripts/display.js"></script>
   <script defer src="/scripts/auth.js"></script>
+  <script defer src="/scripts/app.js"></script>
 
   <title>IBDB</title>
 </head>
 
 <body>
-  <!-- Button trigger modal -->
-  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#loginModal">
-    Log In
-  </button>
 
-  <!-- Modal -->
-  <div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Account
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <button type="button" id="loginBtn" class="dropdown-item" data-toggle="modal" data-target="#userModal">
+              Log In
+            </button>
+            <button type="button" id="registerBtn" class="dropdown-item" data-toggle="modal" data-target="#userModal">
+              Register
+            </button>
+            <button type="button" id="logoutBtn" class="dropdown-item" data-toggle="modal" data-target="#userModal">
+              Log Out
+            </button>
+          </div>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
+    </div>
+  </nav>
+
+  <!-- User Modal -->
+  <div class="modal fade" id="userModal" tabindex="-1" role="dialog" aria-labelledby="userModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">User Login</h5>
+          <h5 class="modal-title" id="userModalLabel"></h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <i class="fas fa-times" aria-hidden="true"></i>
           </button>
         </div>
-        <div class="modal-body">
-          <form id="loginForm">
-            <div class="form-group">
-              <label for="loginEmail">Email address</label>
-              <input type="email" class="form-control" id="loginEmail" aria-describedby="emailHelp">
-              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        <div class="modal-body" id="formBody">
+          <form>
+            <div id="nameGroup">
+              <div class="form-group" id="firstNameGroup">
+                <label for="userFitstName">First Name</label>
+                <input type="text" class="form-control" id="userFirstName">
+              </div>
+              <div class="form-group" id="lastNameGroup">
+                <label for="userEmail">Last Name</label>
+                <input type="text" class="form-control" id="userLastName">
+              </div>
             </div>
-            <div class="form-group">
-              <label for="loginPassword">Password</label>
-              <input type="password" class="form-control" id="loginPassword">
-              <small class="form-text text-muted passwordHelp">Password be at least 8 characters long, and not exceed 52 characters.</small>
-              <small class="form-text text-muted passwordHelp">It must also contain at least one of each: a capital letter, a lowecase letter, and a digit.</small>
+            <div class="form-group" id="emailGroup">
+              <label for="userEmail">Email Address</label>
+              <input type="email" class="form-control" id="userEmail" aria-describedby="emailHelp">
             </div>
+            <div class="form-group" id="passwordGroup">
+              <label for="userPassword">Password</label>
+              <input type="password" class="form-control" id="userPassword">
+            </div>
+            <input type="submit" class="d-none">
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button type="button" id="loginSubmit" class="btn btn-primary">Log In</button>
+          <button type="button" id="userCancel" class="btn btn-secondary" data-dismiss="modal">
+            <i class="fas fa-times mr-2"></i>Cancel
+          </button>
+          <button type="button" id="userRegister" class="btn btn-primary" name="button"><i class="fas fa-plus-square mr-2"></i>Register Instead</button>
+          <button type="button" id="userSubmit" class="btn btn-primary">
+            <i id="actionStatus" class="fas fa-sign-in-alt mr-2"></i>
+            <span id="actionText"></span>
+          </button>
         </div>
       </div>
     </div>
   </div>
+
 </body>
 
 </html>
