--- a/views/auth.html
+++ b/views/auth.html
@@ -20,24 +20,23 @@
   <script defer src="/scripts/auth.js"></script>
   <script defer src="/scripts/app.js"></script>
 
-  <title>IBDB</title>
+  <title>IBDb</title>
 </head>
 
 <body>
-
+  <!-- Menu -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">Navbar</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item dropdown">
+      <div class="navbar-nav ml-auto">
+        <div class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Account
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <button type="button" id="loginBtn" class="dropdown-item" data-toggle="modal" data-target="#userModal">
               Log In
             </button>
@@ -48,9 +47,9 @@
               Log Out
             </button>
           </div>
-        </li>
-      </ul>
-      <form class="form-inline my-2 my-lg-0">
+        </div>
+      </div>
+      <form class="form-inline my-2 my-lg-0 d-none">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
@@ -103,7 +102,6 @@
       </div>
     </div>
   </div>
-
 </body>
 
 </html>
