Time to MVP - Presentation-ready

--- a/views/index.html
+++ b/views/index.html
@@ -117,9 +117,11 @@
       </div>
       <div class="col col-lg-3">
         IBDb Rating
+        <i id="sort-avg" class="fas fa-sort-amount-down"></i>
       </div>
       <div class="col col-lg-3">
         Your Rating
+        <i id="sort-user" class="fas fa-sort-amount-down"></i>
       </div>
     </div>
     <div id="book-list">
